syntax = "proto3";

option java_package = "ru.turbogoose.grpc";

message ItemId {
  int32 id = 1;
}

message ItemCreateRequest {
  string name = 1;
}

message ItemInfo {
  int32 id = 1;
  string name = 2;
}

message ItemPaginatedRequest {
  int32 pageNumber = 1;
  int32 pageLength = 2;
}

message ItemInfoPaginatedResponse {
  repeated ItemInfo Items = 1;
}

message Empty {}

service ItemCrudService {
  rpc getItemById(ItemId) returns (ItemInfo);
  rpc getPageOfItems(ItemPaginatedRequest) returns (ItemInfoPaginatedResponse);
  rpc createItem(ItemCreateRequest) returns (ItemInfo);
  rpc updateItem(ItemInfo) returns (ItemInfo);
  rpc deleteItemById(ItemId) returns (Empty);
}